# any-pdf-ocr-json

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: change-log.md  current-architecture.md  implementation-decisions.md  next-agent-handoff.md  project-context.md  quality-root-cause-analysis.md  sample-audit-checklist.md
feature-context/: local-processing-strategy.md  pdf-to-question-json-ingestion.md  review-and-approval-workflow.md  source-faithfulness-rules.md
roles/: ai-solution-architect.md  architecture-gatekeeper.md  business-analyst.md  documentation-mentor.md  performance-cost-reviewer.md  product-manager.md  qa-reviewer.md  release-gatekeeper.md  security-reviewer.md  senior-python-engineer.md  solution-architect.md
skills/: SKILL.md
tests/: test_answer_option_reconciler.py  test_answer_solution_mapper.py  test_artifact_reconciliation.py  test_audit_final_cli.py  test_azure_di_client_images.py  test_azure_document_intelligence_adapter.py  test_batch_pdf_runner.py  test_build_final_cli.py  test_candidate_structure_hardening.py  test_classify_cli.py  test_cli_path_validation.py  test_content_line_expander.py  test_deterministic_option_parser.py  test_document_evidence_normalizer.py  test_expected_count_canonicalizer.py  test_extraction_manifest.py  test_extractor_orchestrator.py  test_final_package_auditor.py  test_final_question_package_builder.py  test_final_review_part_14m.py  test_final_review_part_14o.py  test_final_review_part_14p.py  test_import_smoke.py  test_imports.py  test_ingestion_eligibility.py  test_llm_provider_preflight.py  (+34 more)
(+135 files in other folders)
