[project]
name = "meritranker-data-ingestion"
version = "0.1.0"
description = "Local-first PDF ingestion for source-faithful MeritRanker question JSON"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marker-pdf>=1.10.2",
    "pydantic>=2.0,<3",
    "python-dotenv>=1.0,<2",
]

[project.scripts]
meritranker-ingest = "meritranker_data_ingestion.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
azure = [
    "azure-ai-documentintelligence>=1.0.0",
    "azure-core>=1.29.0",
]
ocr = [
    "pymupdf>=1.24.0",
]
paddle = [
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meritranker_data_ingestion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
